; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_videotoolboxenc.c_loadVTEncSymbols.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_videotoolboxenc.c_loadVTEncSymbols.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@RTLD_DEFAULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"CMVideoFormatDescriptionGetHEVCParameterSetAtIndex\00", align 1
@compat_keys = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@kCVImageBufferColorPrimaries_ITU_R_2020 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"ITU_R_2020\00", align 1
@kCVImageBufferTransferFunction_ITU_R_2020 = common dso_local global i32 0, align 4
@kCVImageBufferYCbCrMatrix_ITU_R_2020 = common dso_local global i32 0, align 4
@kVTCompressionPropertyKey_H264EntropyMode = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [16 x i8] c"H264EntropyMode\00", align 1
@kVTH264EntropyMode_CAVLC = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [6 x i8] c"CAVLC\00", align 1
@kVTH264EntropyMode_CABAC = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [6 x i8] c"CABAC\00", align 1
@kVTProfileLevel_H264_Baseline_4_0 = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [18 x i8] c"H264_Baseline_4_0\00", align 1
@kVTProfileLevel_H264_Baseline_4_2 = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [18 x i8] c"H264_Baseline_4_2\00", align 1
@kVTProfileLevel_H264_Baseline_5_0 = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [18 x i8] c"H264_Baseline_5_0\00", align 1
@kVTProfileLevel_H264_Baseline_5_1 = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [18 x i8] c"H264_Baseline_5_1\00", align 1
@kVTProfileLevel_H264_Baseline_5_2 = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [18 x i8] c"H264_Baseline_5_2\00", align 1
@kVTProfileLevel_H264_Baseline_AutoLevel = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [24 x i8] c"H264_Baseline_AutoLevel\00", align 1
@kVTProfileLevel_H264_Main_4_2 = common dso_local global i32 0, align 4
@.str.11 = private unnamed_addr constant [14 x i8] c"H264_Main_4_2\00", align 1
@kVTProfileLevel_H264_Main_5_1 = common dso_local global i32 0, align 4
@.str.12 = private unnamed_addr constant [14 x i8] c"H264_Main_5_1\00", align 1
@kVTProfileLevel_H264_Main_5_2 = common dso_local global i32 0, align 4
@.str.13 = private unnamed_addr constant [14 x i8] c"H264_Main_5_2\00", align 1
@kVTProfileLevel_H264_Main_AutoLevel = common dso_local global i32 0, align 4
@.str.14 = private unnamed_addr constant [20 x i8] c"H264_Main_AutoLevel\00", align 1
@kVTProfileLevel_H264_High_3_0 = common dso_local global i32 0, align 4
@.str.15 = private unnamed_addr constant [14 x i8] c"H264_High_3_0\00", align 1
@kVTProfileLevel_H264_High_3_1 = common dso_local global i32 0, align 4
@.str.16 = private unnamed_addr constant [14 x i8] c"H264_High_3_1\00", align 1
@kVTProfileLevel_H264_High_3_2 = common dso_local global i32 0, align 4
@.str.17 = private unnamed_addr constant [14 x i8] c"H264_High_3_2\00", align 1
@kVTProfileLevel_H264_High_4_0 = common dso_local global i32 0, align 4
@.str.18 = private unnamed_addr constant [14 x i8] c"H264_High_4_0\00", align 1
@kVTProfileLevel_H264_High_4_1 = common dso_local global i32 0, align 4
@.str.19 = private unnamed_addr constant [14 x i8] c"H264_High_4_1\00", align 1
@kVTProfileLevel_H264_High_4_2 = common dso_local global i32 0, align 4
@.str.20 = private unnamed_addr constant [14 x i8] c"H264_High_4_2\00", align 1
@kVTProfileLevel_H264_High_5_1 = common dso_local global i32 0, align 4
@.str.21 = private unnamed_addr constant [14 x i8] c"H264_High_5_1\00", align 1
@kVTProfileLevel_H264_High_5_2 = common dso_local global i32 0, align 4
@.str.22 = private unnamed_addr constant [14 x i8] c"H264_High_5_2\00", align 1
@kVTProfileLevel_H264_High_AutoLevel = common dso_local global i32 0, align 4
@.str.23 = private unnamed_addr constant [20 x i8] c"H264_High_AutoLevel\00", align 1
@kVTProfileLevel_H264_Extended_5_0 = common dso_local global i32 0, align 4
@.str.24 = private unnamed_addr constant [18 x i8] c"H264_Extended_5_0\00", align 1
@kVTProfileLevel_H264_Extended_AutoLevel = common dso_local global i32 0, align 4
@.str.25 = private unnamed_addr constant [24 x i8] c"H264_Extended_AutoLevel\00", align 1
@kVTProfileLevel_HEVC_Main_AutoLevel = common dso_local global i32 0, align 4
@.str.26 = private unnamed_addr constant [20 x i8] c"HEVC_Main_AutoLevel\00", align 1
@kVTProfileLevel_HEVC_Main10_AutoLevel = common dso_local global i32 0, align 4
@.str.27 = private unnamed_addr constant [22 x i8] c"HEVC_Main10_AutoLevel\00", align 1
@kVTCompressionPropertyKey_RealTime = common dso_local global i32 0, align 4
@.str.28 = private unnamed_addr constant [9 x i8] c"RealTime\00", align 1
@kVTVideoEncoderSpecification_EnableHardwareAcceleratedVideoEncoder = common dso_local global i32 0, align 4
@.str.29 = private unnamed_addr constant [38 x i8] c"EnableHardwareAcceleratedVideoEncoder\00", align 1
@kVTVideoEncoderSpecification_RequireHardwareAcceleratedVideoEncoder = common dso_local global i32 0, align 4
@.str.30 = private unnamed_addr constant [39 x i8] c"RequireHardwareAcceleratedVideoEncoder\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @loadVTEncSymbols to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @loadVTEncSymbols() #0 {
  %1 = load i32, i32* @RTLD_DEFAULT, align 4
  %2 = call i64 @dlsym(i32 %1, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  store i64 %2, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @compat_keys, i32 0, i32 0), align 8
  %3 = load i32, i32* @kCVImageBufferColorPrimaries_ITU_R_2020, align 4
  %4 = call i32 @GET_SYM(i32 %3, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %5 = load i32, i32* @kCVImageBufferTransferFunction_ITU_R_2020, align 4
  %6 = call i32 @GET_SYM(i32 %5, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %7 = load i32, i32* @kCVImageBufferYCbCrMatrix_ITU_R_2020, align 4
  %8 = call i32 @GET_SYM(i32 %7, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %9 = load i32, i32* @kVTCompressionPropertyKey_H264EntropyMode, align 4
  %10 = call i32 @GET_SYM(i32 %9, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %11 = load i32, i32* @kVTH264EntropyMode_CAVLC, align 4
  %12 = call i32 @GET_SYM(i32 %11, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0))
  %13 = load i32, i32* @kVTH264EntropyMode_CABAC, align 4
  %14 = call i32 @GET_SYM(i32 %13, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0))
  %15 = load i32, i32* @kVTProfileLevel_H264_Baseline_4_0, align 4
  %16 = call i32 @GET_SYM(i32 %15, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0))
  %17 = load i32, i32* @kVTProfileLevel_H264_Baseline_4_2, align 4
  %18 = call i32 @GET_SYM(i32 %17, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.6, i64 0, i64 0))
  %19 = load i32, i32* @kVTProfileLevel_H264_Baseline_5_0, align 4
  %20 = call i32 @GET_SYM(i32 %19, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.7, i64 0, i64 0))
  %21 = load i32, i32* @kVTProfileLevel_H264_Baseline_5_1, align 4
  %22 = call i32 @GET_SYM(i32 %21, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.8, i64 0, i64 0))
  %23 = load i32, i32* @kVTProfileLevel_H264_Baseline_5_2, align 4
  %24 = call i32 @GET_SYM(i32 %23, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.9, i64 0, i64 0))
  %25 = load i32, i32* @kVTProfileLevel_H264_Baseline_AutoLevel, align 4
  %26 = call i32 @GET_SYM(i32 %25, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.10, i64 0, i64 0))
  %27 = load i32, i32* @kVTProfileLevel_H264_Main_4_2, align 4
  %28 = call i32 @GET_SYM(i32 %27, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.11, i64 0, i64 0))
  %29 = load i32, i32* @kVTProfileLevel_H264_Main_5_1, align 4
  %30 = call i32 @GET_SYM(i32 %29, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.12, i64 0, i64 0))
  %31 = load i32, i32* @kVTProfileLevel_H264_Main_5_2, align 4
  %32 = call i32 @GET_SYM(i32 %31, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.13, i64 0, i64 0))
  %33 = load i32, i32* @kVTProfileLevel_H264_Main_AutoLevel, align 4
  %34 = call i32 @GET_SYM(i32 %33, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.14, i64 0, i64 0))
  %35 = load i32, i32* @kVTProfileLevel_H264_High_3_0, align 4
  %36 = call i32 @GET_SYM(i32 %35, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.15, i64 0, i64 0))
  %37 = load i32, i32* @kVTProfileLevel_H264_High_3_1, align 4
  %38 = call i32 @GET_SYM(i32 %37, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.16, i64 0, i64 0))
  %39 = load i32, i32* @kVTProfileLevel_H264_High_3_2, align 4
  %40 = call i32 @GET_SYM(i32 %39, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.17, i64 0, i64 0))
  %41 = load i32, i32* @kVTProfileLevel_H264_High_4_0, align 4
  %42 = call i32 @GET_SYM(i32 %41, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.18, i64 0, i64 0))
  %43 = load i32, i32* @kVTProfileLevel_H264_High_4_1, align 4
  %44 = call i32 @GET_SYM(i32 %43, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.19, i64 0, i64 0))
  %45 = load i32, i32* @kVTProfileLevel_H264_High_4_2, align 4
  %46 = call i32 @GET_SYM(i32 %45, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.20, i64 0, i64 0))
  %47 = load i32, i32* @kVTProfileLevel_H264_High_5_1, align 4
  %48 = call i32 @GET_SYM(i32 %47, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.21, i64 0, i64 0))
  %49 = load i32, i32* @kVTProfileLevel_H264_High_5_2, align 4
  %50 = call i32 @GET_SYM(i32 %49, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.22, i64 0, i64 0))
  %51 = load i32, i32* @kVTProfileLevel_H264_High_AutoLevel, align 4
  %52 = call i32 @GET_SYM(i32 %51, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.23, i64 0, i64 0))
  %53 = load i32, i32* @kVTProfileLevel_H264_Extended_5_0, align 4
  %54 = call i32 @GET_SYM(i32 %53, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.24, i64 0, i64 0))
  %55 = load i32, i32* @kVTProfileLevel_H264_Extended_AutoLevel, align 4
  %56 = call i32 @GET_SYM(i32 %55, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.25, i64 0, i64 0))
  %57 = load i32, i32* @kVTProfileLevel_HEVC_Main_AutoLevel, align 4
  %58 = call i32 @GET_SYM(i32 %57, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.26, i64 0, i64 0))
  %59 = load i32, i32* @kVTProfileLevel_HEVC_Main10_AutoLevel, align 4
  %60 = call i32 @GET_SYM(i32 %59, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.27, i64 0, i64 0))
  %61 = load i32, i32* @kVTCompressionPropertyKey_RealTime, align 4
  %62 = call i32 @GET_SYM(i32 %61, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.28, i64 0, i64 0))
  %63 = load i32, i32* @kVTVideoEncoderSpecification_EnableHardwareAcceleratedVideoEncoder, align 4
  %64 = call i32 @GET_SYM(i32 %63, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.29, i64 0, i64 0))
  %65 = load i32, i32* @kVTVideoEncoderSpecification_RequireHardwareAcceleratedVideoEncoder, align 4
  %66 = call i32 @GET_SYM(i32 %65, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.30, i64 0, i64 0))
  ret void
}

declare dso_local i64 @dlsym(i32, i8*) #1

declare dso_local i32 @GET_SYM(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
